2011-08-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocinumber.c,
	  lib/oci8/properties.rb: Decimal to float and float to decimal conversions
	    are done as exactly ruby does by default. The behavior is customizable by
	    OCI8.properties[:float_conversion_type].

2011-08-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix a bug not to find the OCI library location listed in
	    'ldconfig -p' when LD_LIBRARY_PATH is set.
	    (Reported by Edgars Beigarts.)

2011-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: fix for Solaris compiler.
	    (Reported by Sanjiv Patel.)

2011-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fix for Oracle 11g solaris-sparc32 instant client.
	    The machine type of Oracle 10g solaris-sparc32 instant client was
	    sparc but that of oracle 11g is sparc32plus.
	    (Reported by Sanjiv Patel.)

2011-06-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/bind.c, ext/oci8/oci8.c, ext/oci8/oci8lib.c,
	  lib/oci8/bindtype.rb: drop Oracle 8i support.
	* ext/oci8/ocidatetime.c: OCI8::BindType::OCIDate was deleted.
	* lib/oci8/datetime.rb, test/test_datetime.rb: OCI8::BindType::DateTimeViaOCIDate,
	    OCI8::BindType::TimeViaOCIDate, OCI8::BindType::DateTimeViaOCITimestampTZ
	    and OCI8::BindType::TimeViaOCITimestampTZ were deleted.

2011-06-14  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.5 and 2.0.6.
	* ext/oci8/apiwrap.yml, ext/oci8/lob.c: fix SEGV when freeing a temporary
	    LOB during GC on rubinius 1.2.3.
	* ext/oci8/oci8lib.c: revert the exception type from RuntimeError to
	    OCIException when a closed OCI handle's method is called.
	    It was chaned in 2.0.5 by mistake.

2011-06-12  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.4 and 2.0.5.

2011-06-12  KUBO Takehiro  <kubo@jiubao.org>